[package]
name = "taskmonger"
version = "0.1.3"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
palette = "0.7"
rand = "0.9"
egui-phosphor = "0.11"
egui_dnd = "0.14"
egui_commonmark = "0.22"
colorous = "1.0.16"
chrono = { version = "0.4.43", features = ["serde"] }
image = "0.25.9"
log = "0.4.29"
env_logger = "0.11.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
